UpdateConstruction and UpdateApertureConstruction Methods Implemented

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -80,6 +80,8 @@
       <DependentUpon>AnalyticalForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Modify\UpdateApertureConstructions.cs" />
+    <Compile Include="Modify\UpdateConstructions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AnalyticalForm.resx">
       <DependentUpon>AnalyticalForm.cs</DependentUpon>
