ReplaceApertureConstructions and ReplaceConstructions Implemented

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -80,7 +80,9 @@
       <DependentUpon>AnalyticalForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Modify\ReplaceApertureConstructions.cs" />
     <Compile Include="Modify\UpdateApertureConstructions.cs" />
+    <Compile Include="Modify\ReplaceConstructions.cs" />
     <Compile Include="Modify\UpdateConstructions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AnalyticalForm.resx">
