ProfileLibrary Button Added

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -216,6 +216,7 @@
     <None Include="Resources\SAM_ModelCheck.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\SAM_ProfileLibrary.png" />
     <Content Include="SAM.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
