--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Modify\EditSpaces.cs" />
     <Compile Include="Modify\EditSpace.cs" />
     <Compile Include="Modify\EditProfileLibrary.cs" />
+    <Compile Include="Modify\ImportWeatherData.cs" />
     <Compile Include="Modify\New.cs" />
     <Compile Include="Modify\Import.cs" />
     <Compile Include="Modify\SaveAs.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Modify\EditLibrary.cs" />
     <Compile Include="Modify\EditApertureConstructions.cs" />
     <Compile Include="Modify\ReplaceApertureConstructions.cs" />
+    <Compile Include="Modify\Simulate.cs" />
     <Compile Include="Modify\UpdateApertureConstructions.cs" />
     <Compile Include="Modify\ReplaceConstructions.cs" />
     <Compile Include="Modify\CreateMechanicalSystem.cs" />
