--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -36,8 +36,20 @@
     <ApplicationIcon>SAM.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Interop.TBD">
+      <HintPath>..\..\references_buildonly\Interop.TBD.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="SAM.Analytical">
       <HintPath>..\..\..\SAM\build\SAM.Analytical.dll</HintPath>
+    </Reference>
+    <Reference Include="SAM.Analytical.SolarCalculator, Version=1.0.8146.20478, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Analytical.SolarCalculator.dll</HintPath>
+    </Reference>
+    <Reference Include="SAM.Analytical.Tas, Version=1.0.8158.27803, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Analytical.Tas.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -61,9 +73,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Geometry.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Geometry.SolarCalculator, Version=1.0.8146.20478, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Geometry.SolarCalculator.dll</HintPath>
+    </Reference>
     <Reference Include="SAM.Weather, Version=1.0.8130.17143, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Weather.dll</HintPath>
+    </Reference>
+    <Reference Include="SAM.Weather.Tas, Version=1.0.8158.27802, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Tas\build\SAM.Weather.Tas.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -79,6 +99,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\UIAnalyticalModel.cs" />
+    <Compile Include="Controls\SimulateControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\SimulateControl.designer.cs">
+      <DependentUpon>SimulateControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Enums\SolarCalculationMethod.cs" />
     <Compile Include="Forms\AnalyticalForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +113,12 @@
       <DependentUpon>AnalyticalForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Forms\SimulateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SimulateForm.designer.cs">
+      <DependentUpon>SimulateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Modify\EditAddressAndLocation.cs" />
     <Compile Include="Modify\EditAperture.cs" />
     <Compile Include="Modify\EditInternalConditions.cs" />
@@ -112,8 +145,17 @@
     <Compile Include="Modify\CreateMechanicalSystem.cs" />
     <Compile Include="Modify\UpdateConstructions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\DayTypes.cs" />
+    <Compile Include="Query\Simulate.cs" />
+    <Compile Include="Query\TryGetWeatherData.cs" />
+    <EmbeddedResource Include="Controls\SimulateControl.resx">
+      <DependentUpon>SimulateControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AnalyticalForm.resx">
       <DependentUpon>AnalyticalForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SimulateForm.resx">
+      <DependentUpon>SimulateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -232,6 +274,7 @@
       <Name>SAM.Core.UI</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>set SAM_DIR=$(APPDATA)\SAM\
