--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Modify\EditSpaces.cs" />
     <Compile Include="Modify\EditSpace.cs" />
     <Compile Include="Modify\EditProfileLibrary.cs" />
+    <Compile Include="Modify\SolarSimulation.cs" />
     <Compile Include="Modify\ImportWeatherData.cs" />
     <Compile Include="Modify\New.cs" />
     <Compile Include="Modify\Import.cs" />
@@ -139,7 +140,7 @@
     <Compile Include="Modify\EditLibrary.cs" />
     <Compile Include="Modify\EditApertureConstructions.cs" />
     <Compile Include="Modify\ReplaceApertureConstructions.cs" />
-    <Compile Include="Modify\Simulate.cs" />
+    <Compile Include="Modify\EnergySimulation.cs" />
     <Compile Include="Modify\UpdateApertureConstructions.cs" />
     <Compile Include="Modify\ReplaceConstructions.cs" />
     <Compile Include="Modify\CreateMechanicalSystem.cs" />
@@ -266,6 +267,7 @@
   <ItemGroup>
     <None Include="Resources\SAM_ProfileLibrary.png" />
     <None Include="Resources\SAM_Space.png" />
+    <None Include="Resources\SAM_EnergySimulation.png" />
     <Content Include="SAM.ico" />
   </ItemGroup>
   <ItemGroup>
