--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -62,6 +62,9 @@
     <Reference Include="SAM.Core">
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Core.Excel">
+      <HintPath>..\..\..\SAM_Excel\build\SAM.Core.Excel.dll</HintPath>
+    </Reference>
     <Reference Include="SAM.Core.Tas">
       <HintPath>..\..\..\SAM_Tas\build\SAM.Core.Tas.dll</HintPath>
     </Reference>
@@ -119,6 +122,7 @@
     <Compile Include="Forms\SimulateForm.designer.cs">
       <DependentUpon>SimulateForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modify\PrintRoomDataSheets.cs" />
     <Compile Include="Modify\EditProperties.cs" />
     <Compile Include="Modify\AddMissingObjects.cs" />
     <Compile Include="Modify\EditAddressAndLocation.cs" />
@@ -185,6 +189,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NetOfficeFw.Excel">
+      <Version>1.8.1</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
@@ -274,6 +281,7 @@
     <None Include="Resources\SAM_Clean.png" />
     <None Include="Resources\SAM_AddMissingObjects.png" />
     <None Include="Resources\SAM_AnalyticalModelProperties.png" />
+    <None Include="Resources\SAM_PrintRDS.png" />
     <Content Include="SAM.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -287,6 +295,9 @@
   <PropertyGroup>
     <PostBuildEvent>set SAM_DIR=$(APPDATA)\SAM\
 if not exist "%25SAM_DIR%25" mkdir "%25SAM_DIR%25"
+
+xcopy "$(SolutionDir)\files\resources" "$(APPDATA)\SAM\resources" /Y/I/E/S
+xcopy "$(SolutionDir)\files\resources" "$(USERPROFILE)\Documents\SAM\resources" /D/I/E/S
 
 copy "$(TargetDir)*.dll" "%25SAM_DIR%25"
 copy "$(TargetDir)*.exe" "%25SAM_DIR%25"</PostBuildEvent>
