--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -297,7 +297,7 @@
 if not exist "%25SAM_DIR%25" mkdir "%25SAM_DIR%25"
 
 xcopy "$(SolutionDir)\files\resources" "$(APPDATA)\SAM\resources" /Y/I/E/S
-xcopy "$(SolutionDir)\files\resources" "$(USERPROFILE)\Documents\SAM\resources" /D/I/E/S
+xcopy "$(SolutionDir)\files\resources" "$(USERPROFILE)\Documents\SAM\resources" /Y/D/I/E/S
 
 copy "$(TargetDir)*.dll" "%25SAM_DIR%25"
 copy "$(TargetDir)*.exe" "%25SAM_DIR%25"</PostBuildEvent>
