--- a/SAM_UI/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/SAM_UI/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -38,6 +38,10 @@
     <Reference Include="SAM.Analytical">
       <HintPath>..\..\..\SAM\build\SAM.Analytical.dll</HintPath>
     </Reference>
+    <Reference Include="SAM.Analytical.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SAM_Windows\build\SAM.Analytical.Windows.dll</HintPath>
+    </Reference>
     <Reference Include="SAM.Core, Version=1.0.8181.22169, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
@@ -52,6 +56,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="system.windows.controls.ribbon" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -72,7 +77,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Classes\VisualFace3DObject.cs" />
+    <Compile Include="Classes\VisualPanel.cs" />
     <Compile Include="Controls\AnalyticalModelControl.xaml.cs">
       <DependentUpon>AnalyticalModelControl.xaml</DependentUpon>
     </Compile>
@@ -80,13 +85,24 @@
       <DependentUpon>View3DControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Convert\ToDrawing\Color.cs" />
+    <Compile Include="Convert\ToMedia3D\Vector3D.cs" />
     <Compile Include="Convert\ToMedia3D\VisualFace3DObject.cs" />
     <Compile Include="Convert\ToMedia3D\GeometryModel3D.cs" />
     <Compile Include="Convert\ToMedia3D\Point3D.cs" />
     <Compile Include="Convert\ToMedia3D\MeshGeometry3D.cs" />
     <Compile Include="Convert\ToMedia\Color.cs" />
+    <Compile Include="Convert\ToSAM\Vector3D.cs" />
+    <Compile Include="Convert\ToSAM\Point3D.cs" />
+    <Compile Include="Modify\Zoom.cs" />
     <Compile Include="Modify\Rotate.cs" />
     <Compile Include="Modify\Move.cs" />
+    <Compile Include="Query\Plane.cs" />
+    <Compile Include="Query\Test.cs" />
+    <Compile Include="Query\IsNaN.cs" />
+    <Compile Include="Query\LookDirection.cs" />
+    <Compile Include="Query\Center.cs" />
+    <Compile Include="Query\ScaleTransform.cs" />
+    <Compile Include="Query\TranslateTransform.cs" />
     <Compile Include="Query\PitchAxis.cs" />
     <Compile Include="Query\RollAxis.cs" />
     <Compile Include="Query\YawAxis.cs" />
